anthos-bundles/cis-k8s-v1.7.1/require-securitycontext.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: cis-k8s-v1.7.1-require-securitycontext
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.7.1
  annotations:
    policycontroller.gke.io/bundleVersion: 202312.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-k8s-v1.7.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.7.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202312.0-preview',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.7.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.7.3]',
        severity: 'UNSPECIFIED',
        description: 'Requires that Pods define `securityContext`.',
        remediation: 'Containers cannot run without a `securityContext` defined. Set your containers `securityContext: `. See "Set the security context for a Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod',
        minimumTemplateLibraryVersion: '1.14.3',
        constraintHash: '15277b142d0976eae0bf2fce4eb8bdb49210df870954efbee80d7ff83fdfe369'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - config-management-system
      - asm-system
      - anthos-identity-service
      - apigee
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    exemptImages:
      - gcr.io/anthos-baremetal-release/*
