anthos-bundles/cis-k8s-v1.7.1/restrict-certificatesigningrequests-approval.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleRules
metadata:
  name: cis-k8s-v1.7.1-restrict-certificatesigningrequests-approval
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.7.1
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-k8s-v1.7.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.7.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.7.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.1.11]',
        severity: 'UNSPECIFIED',
        description: 'Restricts access to the client certificate approval API.',
        remediation: 'The approval of the client certificates is restricted. Where possible, remove access to the 'approval' sub-resource of 'certificatesigningrequest' objects. See "CSRs and certificate issuing" for more information: https://kubernetes.io/docs/concepts/security/rbac-good-practices/#csrs-and-certificate-issuing',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '1e542a1377409674f169b6662ddb0c42ca9a16caa94f639493807323d2efc9c2'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - Role
          - ClusterRole
  parameters:
    disallowedRules:
      - apiGroups:
          - certificates.k8s.io
        resources:
          - certificatesigningrequests/approval
        verbs:
          - update
    exemptions:
      clusterRoles:
        - name: admin
        - name: cluster-admin
        - name: config-management-operator
        - name: gke-spiffe-issuer
        - name: istiod-gke-system
        - name: system:controller:certificate-controller
        - name: system:controller:generic-garbage-collector
        - name: system:gcp-controller-manager
        - name: servicemesh
      roles:
        - name: agent-updater
          namespace: gke-connect
